; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos_ticket.c_kuhl_m_kerberos_ticket_createSequenceEncryptionKey.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos_ticket.c_kuhl_m_kerberos_ticket_createSequenceEncryptionKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"{t{i}t{o}}\00", align 1
@ID_CTX_ENCRYPTIONKEY_KEYTYPE = common dso_local global i32 0, align 4
@ID_CTX_ENCRYPTIONKEY_KEYVALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kuhl_m_kerberos_ticket_createSequenceEncryptionKey(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @ID_CTX_ENCRYPTIONKEY_KEYTYPE, align 4
  %11 = call i32 @MAKE_CTX_TAG(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @ID_CTX_ENCRYPTIONKEY_KEYVALUE, align 4
  %14 = call i32 @MAKE_CTX_TAG(i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @ber_printf(i32* %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @ber_printf(i32*, i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @MAKE_CTX_TAG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
